[package]
authors = ["Joseph Chamochumbi"]
edition = "2021"
name = "meilisearch-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = "0.14"
# futures: because we want to block on futures
futures = "0.3"
# serde: required if you are going to use documents
serde = {version = "1.0", features = ["derive"]}
# serde_json: required in some parts of this guide
serde_json = "1.0"
# gray_matter to parse MDX
gray_matter = "0.2.1"
# Clap cli parser
clap = {version = "3.0.14", features = ["derive"]}
# To timestamp publish/update
chrono = "0.4"
# Confirm actions
dialoguer = "0.10.0"
